--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,9 @@
-p {
-  font-family: Lato;
+.treestructure ul,
+.treestructure li {
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+}
+.treestructure-invisible {
+  display: none;
 }
