--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,31 @@
 <hello name="{{ name }}"></hello>
+<main>
+  <section>
+    <app-createnode></app-createnode>
+  </section>
+  <section>
+    <mat-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl" class="treestructure">
+      <mat-tree-node *matTreeNodeDef="let node" >
+        <li  class="mat-tree-node" tabindex="0">
+          <button mat-icon-button disabled></button>
+          {{node.name}}
+        </li>
+      </mat-tree-node>
+      <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
+        <li>
+          <div class="mat-tree-node" tabindex="0">
+            <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.Name">
+              <mat-icon class="mat-icon-rtl-mirror">
+                {{nestedTreeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+              </mat-icon>
+            </button>
+            {{node.name}}
+          </div>
+          <ul [class.treestructure-invisible]="!nestedTreeControl.isExpanded(node)">
+            <ng-container matTreeNodeOutlet></ng-container>
+          </ul>
+        </li>
+      </mat-nested-tree-node>
+    </mat-tree>
+  </section>
+</main>
