--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,12 @@
       <mat-tree-node *matTreeNodeDef="let node" >
         <li  class="mat-tree-node" tabindex="0">
           <button mat-icon-button disabled></button>
+          <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="node.type ==='folder'">folder</mat-icon>
+            <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="node.type ==='file'">insert_drive_file</mat-icon> 
           {{node.name}}
+          <span class="visibleonhover">
+            <app-deletenode (deletedNode)="deleteNode($event)" [currentNode]="node" ></app-deletenode>
+          </span>
         </li>
       </mat-tree-node>
       <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
@@ -19,7 +24,12 @@
                 {{nestedTreeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
               </mat-icon>
             </button>
-            {{node.name}}
+            <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="node.type ==='folder'">folder</mat-icon>
+            <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="node.type ==='file'">insert_drive_file</mat-icon>         
+            {{node.name}}            
+          <span class="visibleonhover">
+            <app-deletenode (deletedNode)="deleteNode($event)" [currentNode]="node" ></app-deletenode>
+          </span>
           </div>
           <ul [class.treestructure-invisible]="!nestedTreeControl.isExpanded(node)">
             <ng-container matTreeNodeOutlet></ng-container>
