--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,36 @@
 <hello name="{{ name }}"></hello>
 <main>
   <section>
-    <app-createnode></app-createnode>
+    <app-createnode (createdNode)="createNode($event)" [isRoot]="true"></app-createnode>
   </section>
   <section>
     <mat-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl" class="treestructure">
       <mat-tree-node *matTreeNodeDef="let node" >
-        <li  class="mat-tree-node" tabindex="0">
+        <li  class="mat-tree-node" tabindex="0" (keyup)="onKeyUp($event,node)" (mouseover)="onKeyUp($event,node)">
           <button mat-icon-button disabled></button>
           <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="node.type ==='folder'">folder</mat-icon>
             <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="node.type ==='file'">insert_drive_file</mat-icon> 
           {{node.name}}
           <span class="visibleonhover">
             <app-deletenode (deletedNode)="deleteNode($event)" [currentNode]="node" ></app-deletenode>
+            <app-createnode *ngIf="node.type ==='folder'" (createdNode)="createChildNode($event)" [isRoot]="false" [currentNode]="node"></app-createnode>            
           </span>
         </li>
       </mat-tree-node>
-      <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
+      <mat-nested-tree-node  *matTreeNodeDef="let node; when: hasNestedChild">
         <li>
-          <div class="mat-tree-node" tabindex="0">
+          <div class="mat-tree-node" tabindex="0" (keyup)="onKeyUp($event,node)" (mouseover)="onKeyUp($event,node)">
             <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.Name">
               <mat-icon class="mat-icon-rtl-mirror">
                 {{nestedTreeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
               </mat-icon>
             </button>
-            <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="node.type ==='folder'">folder</mat-icon>
-            <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="node.type ==='file'">insert_drive_file</mat-icon>         
+            <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="node.type === 'folder'">folder</mat-icon>
+            <mat-icon color="primary" class="file-or-folder-icon pointer" *ngIf="node.type === 'file'">insert_drive_file</mat-icon>         
             {{node.name}}            
           <span class="visibleonhover">
             <app-deletenode (deletedNode)="deleteNode($event)" [currentNode]="node" ></app-deletenode>
+            <app-createnode *ngIf="node.type ==='folder'" (createdNode)="createChildNode($event)" [isRoot]="false" [currentNode]="node"></app-createnode>            
           </span>
           </div>
           <ul [class.treestructure-invisible]="!nestedTreeControl.isExpanded(node)">
